testsuite/tests/polykinds/T11142.stderr

T11142.hs:9:8: error:
    • The kind of variable ‘b’, namely ‘k’,
      depends on variable ‘k’ from an inner scope
      Perhaps bind ‘b’ sometime after binding ‘k’
    • In the type signature:
        foo :: forall b. (forall k (a :: k). SameKind a b) -> ()
